// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render one ExpenseSummary the total of the expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </p>
</div>
`;

exports[`should render one ExpenseSummary the total of the multi expenses 1`] = `
<div>
  <p>
    Viewing 
    25
     
    expenses
     totalling 
    $123,456,123.46
  </p>
</div>
`;
